lesson02 append commit

--- a/lesson03/Assignment-03.ipynb
+++ b/lesson03/Assignment-03.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans: 可以在拟合函数搜索参数值时具有方向性，已到达快速拟合的目的。"
    ]
   },
   {
@@ -92,7 +92,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "+ Gredient 梯度就是在此处的变化率（导数）\n",
+    "+ Descent 向着导数变小的方向发展，最终直至导数趋向于0，求得最优值"
    ]
   },
   {
@@ -107,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "}Ans:有方向性的前进，在前进的过程中不断重新纠偏，比随机设定方向效率更高"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "Ans:就是使用合适的数学模型通过已有的经验数据，求出模型的各参数， 根据确定的模型，进行预测。"
    ]
   },
   {
@@ -142,7 +143,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ 使用动态规划的方法，把一个复杂的问题，分解成若干个简单的子问题，把每个子问题解决了，复杂的问题也随之解决，在做的过程中，避免了对子问题的重复计算，可以大大提高计算效率。\n",
+    "+ 动态规划可以把搜索过的重复子问题过滤掉，不进行重复计算。之前的路径搜索，是把已经探索过的节点排除掉，只探索没有探索过的节点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Why do we still need dynamic programming? Why not we train a machine learning to fit a function which could get the `right` answer based on inputs?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 因为有些问题很难构造处合适的机器学习模型，用机器学习的方法将很难实现。我们应该根据不同类型的问题采取更适合这个问题解决的办法，而不能认为哪一种方法很厉害什么问题都能解决。"
    ]
   },
   {
@@ -156,8 +172,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ 背包问题\n",
+    "+ 最短路径问题\n",
+    "+ 资源分配问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Can you catch up at least 3 problems wich could sloved by Edit Distance? "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,7 +200,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ 1. 可以拆分成若干个子问题,并且每个子问题最优的方案组成整个问题的最优\n",
+    "+ 2. 上个阶段的子问题的状态不影响下个子问题的决策\n",
+    "+ 3. 每个已经解决的子问题的状态可以存储下来，当再次遇到此子问题，不需再次计算，可直接从存储中拿过来，以去除冗余操作"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. What's the disadvantages of Dynamic Programming? (You may need search by yourself in Internet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "动态规划方法对计算机的内存占用比较大，可以说是用空间换时间的方案。当数据量比较大时，容易导致内存溢出。"
    ]
   },
   {
